--- a/shush.1.html
+++ b/shush.1.html
@@ -134,8 +134,6 @@
 
 <h3 id="Main-Section">Main Section</h3>
 
-<p>Test:</p>
-
 <dl>
 <dt class="flush"><code>command</code></dt><dd><p>The command to run.</p></dd>
 <dt class="flush"><code>lock</code></dt><dd><p>If set, <code>shush</code> attempts to obtain a lock file before running the command,
@@ -263,8 +261,8 @@ U^(.+)$
 
 <h2 id="AUTHOR">AUTHOR</h2>
 
-<p>Christophe Kalt <a href="&#109;&#x61;&#x69;&#x6c;&#116;&#111;&#x3a;&#x73;&#104;&#x75;&#x73;&#x68;&#64;&#x74;&#97;&#114;&#x61;&#110;&#x69;&#115;&#x2e;&#x6f;&#114;&#x67;" data-bare-link="true">&#x73;&#x68;&#x75;&#x73;&#x68;&#x40;&#116;&#x61;&#114;&#x61;&#110;&#105;&#x73;&#46;&#x6f;&#114;&#x67;</a> (Original author)
-Stephen Muth <a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#111;&#x3a;&#x73;&#x6d;&#x75;&#x74;&#104;&#52;&#64;&#x67;&#x6d;&#x61;&#105;&#108;&#46;&#x63;&#111;&#109;" data-bare-link="true">&#115;&#109;&#117;&#116;&#104;&#52;&#64;&#103;&#x6d;&#x61;&#x69;&#x6c;&#x2e;&#x63;&#x6f;&#109;</a></p>
+<p>Christophe Kalt <a href="&#x6d;&#x61;&#x69;&#108;&#116;&#x6f;&#58;&#115;&#104;&#117;&#x73;&#x68;&#64;&#116;&#x61;&#114;&#97;&#x6e;&#x69;&#115;&#46;&#111;&#114;&#103;" data-bare-link="true">&#115;&#104;&#117;&#x73;&#x68;&#64;&#x74;&#97;&#x72;&#x61;&#110;&#x69;&#115;&#46;&#x6f;&#x72;&#x67;</a> (Original author)
+Stephen Muth <a href="&#109;&#97;&#x69;&#108;&#116;&#x6f;&#58;&#x73;&#109;&#117;&#x74;&#104;&#52;&#x40;&#x67;&#109;&#x61;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#109;" data-bare-link="true">&#115;&#x6d;&#x75;&#x74;&#104;&#52;&#64;&#x67;&#x6d;&#97;&#105;&#x6c;&#46;&#x63;&#111;&#x6d;</a></p>
 
 
   <ol class='man-decor man-foot man foot'>
