--- a/shush.1.html
+++ b/shush.1.html
@@ -257,12 +257,12 @@ U^(.+)$
 
 <h2 id="AVAILABILITY">AVAILABILITY</h2>
 
-<p>The latest official release of shush is available on github. The old version is available on http://web.taranis.org/shush/.</p>
+<p>The latest release of shush is available on github. The old version is available on http://web.taranis.org/shush/.</p>
 
 <h2 id="AUTHOR">AUTHOR</h2>
 
-<p>Christophe Kalt <a href="&#x6d;&#x61;&#x69;&#108;&#116;&#x6f;&#58;&#115;&#104;&#117;&#x73;&#x68;&#64;&#116;&#x61;&#114;&#97;&#x6e;&#x69;&#115;&#46;&#111;&#114;&#103;" data-bare-link="true">&#115;&#104;&#117;&#x73;&#x68;&#64;&#x74;&#97;&#x72;&#x61;&#110;&#x69;&#115;&#46;&#x6f;&#x72;&#x67;</a> (Original author)
-Stephen Muth <a href="&#109;&#97;&#x69;&#108;&#116;&#x6f;&#58;&#x73;&#109;&#117;&#x74;&#104;&#52;&#x40;&#x67;&#109;&#x61;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#109;" data-bare-link="true">&#115;&#x6d;&#x75;&#x74;&#104;&#52;&#64;&#x67;&#x6d;&#97;&#105;&#x6c;&#46;&#x63;&#111;&#x6d;</a></p>
+<p>Christophe Kalt <a href="&#109;&#97;&#105;&#x6c;&#116;&#x6f;&#58;&#x73;&#104;&#x75;&#x73;&#104;&#x40;&#116;&#x61;&#x72;&#97;&#110;&#105;&#115;&#x2e;&#x6f;&#x72;&#103;" data-bare-link="true">&#x73;&#x68;&#117;&#115;&#104;&#64;&#x74;&#97;&#114;&#x61;&#x6e;&#105;&#115;&#x2e;&#111;&#114;&#103;</a> (Original author)
+Stephen Muth <a href="&#x6d;&#97;&#x69;&#x6c;&#116;&#x6f;&#58;&#115;&#x6d;&#117;&#x74;&#104;&#52;&#x40;&#x67;&#x6d;&#x61;&#105;&#x6c;&#46;&#x63;&#x6f;&#109;" data-bare-link="true">&#x73;&#109;&#x75;&#x74;&#x68;&#x34;&#64;&#103;&#109;&#97;&#x69;&#108;&#46;&#99;&#111;&#x6d;</a></p>
 
 
   <ol class='man-decor man-foot man foot'>
